--- a/R/wklife-elasticity-lorenzen.Rmd
+++ b/R/wklife-elasticity-lorenzen.Rmd
@@ -58,40 +58,7 @@ options(digits=3)
 ```
 
 ```{r}
-ProdFn<-function(x){
-  res=lhPar(FLPar(x))
-  eql=lhEql(res,m=function(wt,params){
-                          res=wt%^%params["m2"] 
-                          res=params["m1"]%*%res
-                          res})
-    
-  c(log(lambda(leslie(eql,fbar=c(refpts(eql)["crash","harvest"]))[drop=TRUE])),
-    log(lambda(leslie(eql,fbar=c(refpts(eql)["msy",  "harvest"]))[drop=TRUE])))}
-
-rFn=function(x){
-    eql=lhEql(lhPar(FLPar(x)),m=function(wt,params){
-                          res=wt%^%params["m2"] 
-                          res=params["m1"]%*%res
-                          res})
-    
-    c("r"  =log(lambda(leslie(eql,fbar=c(refpts(eql)["crash","harvest"]))[drop=TRUE])),
-      "r.c"=log(lambda(leslie(eql,fbar=c(refpts(eql)["msy","harvest"]))[drop=TRUE])))}
-
-refFn<-function(x){
-  
-  rf=refpts(lhEql(lhPar(FLPar(x)),m=function(wt,params){
-                          res=wt%^%params["m2"] 
-                          res=params["m1"]%*%res
-                          res}))
-    
-  res=c(hmsy  =c(rf["msy","yield"]/rf["msy","ssb"]),
-        fcrash=c(rf["crash","harvest"]),
-        fmsy  =c(rf["msy","harvest"]),
-        bmsy  =c(rf["msy","ssb"]),
-        msy   =c(rf["msy","yield"]),
-        shape =c(rf["msy","ssb"]/rf["virgin","ssb"]))
-    
-  res}
+source('~/Desktop/sea++/mydas/pkg/R/elas.R')
 
 my_smooth <- function(data,mapping,...){
   ggplot(data=data,mapping=mapping)+
@@ -134,6 +101,10 @@ lh[lh[,"t0"]>0&!is.na(lh[,"t0"]),"t0"]=NA
 lh=lhPar(lh)[c("k","linf","t0","a50","a","b","bg","s","a1","sl","sr"),]  
 lh=rbind(lh,propagate(FLPar(m1=0.3,m2=-0.288),dim(lh)[1]))
 lh=lhPar(lh)
+```
+
+```{r}
+save(lh,file="/home/laurence/Desktop/lh.RData")
 ```
 
 \newpage
@@ -182,6 +153,33 @@ save(jacR,file="/home/laurence/Desktop/tmp/jacR.RData")
 ```{r, elasticity-r}
 res  =FLPar(t(aaply(lh,2,rFn)))
 elasR=FLPar(sweep(jacR,c(1,3),res,"/"))
+```
+
+```{r jacobian-gt}
+load("/home/laurence/Desktop/lh.RData")  
+   
+source('~/Desktop/sea++/mydas/pkg/R/genTime.R')
+
+fn=function(x){
+  res=jacobian(gtFn,FLPar(x))
+  dimnames(res)=list(var=c("gtime","amsy","lopt"),params=dimnames(x)$params)
+  
+  res}
+
+jacGt=aaply(lh,2,fn)    
+dimnames(jacGt)$params=dimnames(lh)$params  
+jacGt=FLPar(aperm(jacGt,c(2:3,1)))  
+```
+
+```{r, jacobian-gt2}
+save(jacGt,file="/home/laurence/Desktop/tmp/jacGt.RData")        
+```
+
+**Table `r iTab=iTab+1; iTab`** Elasticity of parameters with respect to generation time.
+
+```{r, elasticity-gt} 
+res  =FLPar(t(aaply(lh,2,rFn)))     
+elasGt=FLPar(sweep(jacGt,c(1,3),res,"/"))  
 ```
 
 ```{r jacobian-refs}
@@ -241,6 +239,21 @@ ggplot(dat)+
 **Figure `r iFig=iFig+1; iFig`** Elasticity analysis (r) and at $B_{MSY}$ (r.c).
 
 
+```{r, elasGt, fig.height=4}
+theme_set(theme_bw())        
+dat=subset(melt(model.frame(elasGt,id=c("params","iter"))),
+         params%in%c("k","linf","t0","a50","s","b","m1","m2"))
+dat$species=wklife[dat$iter,"species"]
+dat$params=factor(dat$params,level=c("linf","k","t0","b","a50","m1","m2","s"))
+
+ggplot(dat)+  
+  geom_boxplot(aes(params,abs(value)))+
+  facet_grid(variable~.,scale="free")
+  #scale_y_continuous(limits=c(0,20))
+```
+
+**Figure `r iFig=iFig+1; iFig`** Elasticity analysis generation time.
+
 ```{r, elasRef}
 theme_set(theme_bw())
 
@@ -250,9 +263,22 @@ dat$species=wklife[dat$iter,"species"]
 dat$params=factor(dat$params,level=c("linf","k","t0","b","a50","m1","m2","s"))
 dat$variable=factor(dat$variable,level=c("msy","bmsy","fmsy","hmsy","shape","fcrash"))
 
+#dat$value=pmin(dat$value,10)
+
 ggplot(dat)+
   geom_boxplot(aes(params,abs(value)))+
   facet_grid(variable~.,scale="free")
+```
+
+**Figure `r iFig=iFig+1; iFig`** Elasticity analysis
+
+
+```{r, elasRef2}
+ggplot(dat)+ 
+  geom_boxplot(aes(params,abs(value)))+
+  facet_grid(variable~.)+
+  scale_y_continuous(limits=c(0,15))+
+  theme_bw()
 ```
 
 **Figure `r iFig=iFig+1; iFig`** Elasticity analysis
