--- a/tasks/task6/12month/mydas-wklife.Rmd
+++ b/tasks/task6/12month/mydas-wklife.Rmd
@@ -1,11 +1,14 @@
 ---
-title: "mydas"
-subtitle: "Funded by the Irish Exchequer and EMFF 2014-2020"
+beamer_presentation: default
 author: "Laurence Kell, Alex Tidd, Coilin Minto & Maite Pons"
 date: "October 5, 2018"
-output: ioslides_presentation
+output:
+  ioslides_presentation: default
+  beamer_presentation: default
+subtitle: Funded by the Irish Exchequer and EMFF 2014-2020
+title: "mydas"
 ---
-
+  
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo      =FALSE)
 ```
@@ -21,8 +24,8 @@ library(png)
 **Develop MSY reference points** or proxies across the spectrum of data-limited stocks.
 
 <!-- Economic value; Importance; Sensitivity to the impacts of fishing; Available data. -->
-
-**Simulation Framework**, as a number of data-limited methods already exist implement a common framework to compare their performance
+  
+  **Simulation Framework**, as a number of data-limited methods already exist implement a common framework to compare their performance
 
 **Diagnostics** to assess sensitivity to assumptions and bias. 
 
@@ -31,71 +34,71 @@ library(png)
 # Simulation Framework
 
 ## Life Histories
-```{r fig.height=5.5}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/papers/FLife/tex/figsfb-1.png"))
+```{r,echo=FALSE, out.width="65%"}
+knitr::include_graphics("figs/figsfb-1.png")
 ```
 
 ## Case Studies
 Turbot, Brill, Pollack, Ray, Sprat, Lobster, Razors
- 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/om/turbot-pairs-1.png"))
+
+```{r ,echo=FALSE, out.width="60%"}
+knitr::include_graphics('figs/turbot-pairs-1.png')
 ```
 
 
 ## Natural Mortality
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/papers/FLife/tex/figsm-1.png"))
-```
+#```{r,echo=FALSE}
+#knitr::include_graphics('figs/figsm-1.png')
+#```
 
 ## Biology
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/om/turbot-vectors-1.png"))
+```{r ,echo=FALSE, out.width="65%"}
+knitr::include_graphics('figs/turbot-vectors-1.png')
 ```
 
 ## Equilibrium and Reference Points
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/om/turbot-eqRun-1.png"))
+```{r,echo=FALSE,out.width="70%"}
+knitr::include_graphics('figs/turbot-eqRun-1.png')
 ```
 
 ## Operating Model
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/om/turbot-ts-1.png"))
+```{r,echo=FALSE, out.width="70%"}
+knitr::include_graphics('figs/turbot-ts-1.png')
 ```
 
 # Sensitvity Analysis
 
 ## Elasticity
 Reference Points
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/R/tex/elas-lorenzen/elasRef-1.png"))
+```{r ,echo=FALSE,out.width="70%"}
+knitr::include_graphics('figs/elasRef-1.png')
 ```
 
 ## Elasticity
 Reference Points
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/R/tex/elas-lorenzen/elasRef2-1.png"))
+```{r,echo=FALSE,out.width="70%"}
+knitr::include_graphics('figs/elasRef2-1.png')
 ```
 
 ## Elasticity
 
 Population Growth Rate
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/R/tex/elas-lorenzen/elasR-1.png"))
+```{r ,echo=FALSE,out.width="75%"}
+knitr::include_graphics('figs/elasR-1.png')
 ```
 
 ## Elasticity
 
 Mean age at virgin and $F_{MSY}$, and $L_{opt}$
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/R/tex/elas-lorenzen/elasGt-1.png"))
+  ```{r ,echo=FALSE, out.width="70%"}
+knitr::include_graphics('figs/elasGt-1.png')
 ```
 
 ## Elasticity
 
 Species
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/R/tex/elas-lorenzen/comp-1.png"))
+```{r,echo=FALSE, out.width="70%"}
+knitr::include_graphics('figs/comp-1.png')
 ```
 
 # Length v Catch Methods
@@ -103,14 +106,14 @@ grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/R/tex/elas-loren
 ## Scenarios
 Stock trends 
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/maite-l-scen.png"))
-```
+#```{r ,echo=FALSE, out.width="70%"}
+#knitr::include_graphics('figs/maite-l-scen.png')
+#```
 
 ## Evaluation
 
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/maite-cl.png"))
+```{r ,echo=FALSE, out.width="70%"}
+knitr::include_graphics('figs/maite-cl.png')
 ```
 
 # Length Based Methods
@@ -118,53 +121,53 @@ grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/mait
 ## Observation Error Model
 Selection pattern
 
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/maite-l-sel.png"))
+```{r ,echo=FALSE, out.width="70%"}
+knitr::include_graphics('figs/maite-l-sel.png')
 ```
 
 ## Evaluation 
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/maite-l.png"))
+```{r ,echo=FALSE,out.width="40%"}
+knitr::include_graphics('figs//maite-l.png')
 ```
 
 # Turbot Example
 
 
 ## Operating Model
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/om/turbot-ts-1.png"))
+```{r,echo=FALSE,out.width="60%"}
+knitr::include_graphics('figs/turbot-ts-1.png')
 ```
 
 ## Category 1: Age based
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/simtest/vpa-xsa-turbot-1.png"))
+```{r ,echo=FALSE, out.width="50%"}
+knitr::include_graphics('figs/vpa-xsa-turbot-1.png')
 ```
 
 ## Category 1: Biomass based
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/simtest/bd-turbot-1.png"))
+```{r ,echo=FALSE, out.width="60%"}
+knitr::include_graphics('figs/bd-turbot-1.png')
 ```
 
 ## Category 3: Catch only
 
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/simtest/bdsra-turbot-plot-1.png"))
+```{r ,echo=FALSE, out.width="55%"}
+knitr::include_graphics('figs/bdsra-turbot-plot-1.png')
 ```
 
 ## LBSPR
 
 Fishing Mortality 
 
-```{r fig.height=4.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/simtest/lbspr-turbot-fm-1.png"))
+```{r,echo=FALSE, out.width="60%"}
+knitr::include_graphics('figs/lbspr-turbot-fm-1.png')
 ```
 
 
 ## MLZ
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/simtest/mlz-turbot-z-1.png"))
+```{r ,echo=FALSE, out.width="60%"}
+knitr::include_graphics('figs/mlz-turbot-z-1.png')
 ```
 
 # MSE
@@ -184,40 +187,40 @@ grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/tex/
 
 ## Cat 1; Aged based ICES AR
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/mp-a.png"))
+```{r ,echo=FALSE,  out.width="30%"}
+knitr::include_graphics('figs/mp-a.png')
 ```
 
 ## Cat 1; Biomass based ICES AR
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/mp-b.png"))
+```{r ,echo=FALSE,out.width="30%"}
+knitr::include_graphics('figs/mp-b.png')
 ```
 
 ## Cat 1;  Comparison
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/papers-2018/mp-c1.png"))
+```{r 5,echo=FALSE,out.width="40%"}
+knitr::include_graphics('figs/mp-c1.png')
 ```
 
 ## Empirical HCRs
 Index Relative to Reference
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/mp-p.png"))
+```{r ,echo=FALSE, out.width="40%"}
+knitr::include_graphics('figs/mp-p.png')
 ```
 
 ## Empirical HCRs
 Trend in Index 
 
-```{r fig.height=5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/mp-d.png"))
+```{r f,echo=FALSE, out.width="60%"}
+knitr::include_graphics('figs/mp-d.png')
 ```
 
 ## Compare  Performance
 
-```{r fig.height=5.5,echo=FALSE}
-grid.raster(readPNG("/home/laurence/Desktop/sea++/mydas/meetings/wklifeiiiv/papers-2018/mp-c.png"))
+```{r ,echo=FALSE,out.width="60%"}
+knitr::include_graphics('figs/mp-c.png')
 ```
 
 
@@ -238,11 +241,10 @@ Compare across species, stocks, fisheries and advice rules
 ## R Packages
 
 + FLR
-    + FLife
-    + mydas
-    + mpb
++ FLife
++ mydas
++ mpb
 + R Packages
-    + LBSPR
-    + MLZ
-    + ...
-    
++ LBSPR
++ MLZ
++ ...
