--- a/tasks/task4/R/razor.Rmd
+++ b/tasks/task4/R/razor.Rmd
@@ -66,7 +66,9 @@ lhist=c(t0  =5/365,
         k   =0.002*365,
         amax=2555/365) 
      
-lh=read.csv("/home/laurence/Desktop/sea++/mydas/tasks/task4/inputs/razorGrowth.csv")[,1:3]     
+lh=read.csv("/home/laurence/Desktop/sea++/mydas/project/tasks/task4/inputs/razorGrowth.csv")[,1:3]
+lh[,1]=lh[,1]/10
+
 lh=cbind(lh,rbind(ab[,c("a","b")],
                   cbind(a   =rep(NA,dim(lh)[1]-dim(ab)[1]),
                         b   =rep(NA,dim(lh)[1]-dim(ab)[1]))))
@@ -165,15 +167,27 @@ plot(iter(eq,1),refpts=FALSE)
 
 ## Population dynamics
 
+```{r}
+save(lh,eq,file=file.path(dirDat,"razor.RData"),compress="xz")    
+```
+
 ```{r om}
 #http://www.fishbase.org/manual/Key%20Facts.htm
 
-gTime=round(FLife:::genTime(FLPar(aaply(lh,1,mean))))
+genTime<-function(object,f=0){
+  
+     object@fbar=object@fbar[,1]%=%f
+     n=stock.n(object)[,1]
+     
+     apply(stock.wt(object)%*%n%*%ages(stock.wt(object)),6,sum)%/%
+     apply(stock.wt(object)%*%n,6,sum)}
+
+gTime=round(mean(mean(genTime(eq))))
 
 eq@fbar=refpts(eq)["msy","harvest"]%*%FLQuant(c(rep(.1,19),
                                               seq(.1,2,length.out=30),
-                                              seq(2,.7,length.out=gTime)[-1],
-                                              rep(.7,61)))[,1:105]
+                                              seq(2,1.0,length.out=gTime)[-1],
+                                              rep(1.0,61)))[,1:105]
 
 om=as(eq,"FLStock")
 om=fwd(om,fbar=fbar(om)[,-1],sr=eq,residuals=srDev)
@@ -186,7 +200,7 @@ plot(om)
 **Figure `r iFig=iFig+1; iFig`** Time series.
 
 ```{r ts}
-plot(FLQuants(om, 
+plot(FLQuants(om,
           "ssb" = function(x) ssb(x)%/%refpts( eq)["msy","ssb"], 
           "f" =   function(x) fbar(x)%/%refpts(eq)["msy","harvest"], 
           "rec" = function(x) rec(x)%/%refpts( eq)["msy","rec"], 
